<resources>
    <string name="app_name" translatable="false">HistoryGo</string>

    <!-- Strings used for Login Activity -->
    <string name="fields">Please complete all fields.</string>
    <string name="switchEnEs" translatable="false">Español / English</string>
    <string name="notification_granted">Permission for notifications granted.</string>
    <string name="notification_denied">Permission for notifications denied.</string>
    <string name="welcome">"Welcome !"</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_forgot">Did you forget your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Create new account</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!-- Strings used for Cognito Class -->
    <string name="sign_up_success">Sign-up success</string>
    <string name="user_already_confirmed">Error: User already confirmed</string>
    <string name="signup_error_user_not_confirmed">Sign-up error: The user is not yet confirmed. Please check your email.</string>
    <string name="signup_error_invalid_password">Sign-up error: The entered password is invalid.</string>
    <string name="signup_error">Sign-up error: User confirmed before</string>
    <string name="signup_error_2">Sign-up error: %1$s</string>
    <string name="user_confirmed">User Confirmed</string>
    <string name="connection_error">Check your connection</string>
    <string name="sign_in_success">Sign in success</string>
    <string name="login_error_unconfirmed">Login error: User not confirmed. Check your email.</string>
    <string name="login_error_unauthorized">Login error: Incorrect username or password.</string>
    <string name="login_error_not_found">User not found. Check your username.</string>
    <string name="login_error_generic">Login error: %1$s</string>
    <string name="password_reset_success">Password reset successfully</string>
    <string name="verification_code_sent">Verification code sent. Check your email.</string>
    <string name="password_reset_error_not_found">Password reset error: No user found with that email.</string>
    <string name="password_reset_error_invalid_code">Password reset error: The verification code is invalid. Please try again.</string>
    <string name="password_reset_error_generic">Password reset error: %1$s</string>
    <string name="request_password_reset_first">Request password recovery first</string>
    <string name="attributes_updated">Attributes updated successfully!</string>
    <string name="attributes_update_failed">Failed to update attributes: %1$s</string>
    <string name="password_change_success">Password changed successfully!</string>
    <string name="password_change_error">Error changing password: %1$s</string>


    <!-- Strings used for Register Activity -->
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="create_your_account">Create your account</string>
    <string name="create_your_account_exp">Create your account and start enjoying our experiences</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="continueR">Continue</string>
    <string name="alreadyAccount">I already have an account</string>


    <!-- Strings used for Fogotten Passsword Activity -->
    <string name="forgot_password">Forgot your password?</string>
    <string name="enter_email">Please enter your email to verify it\'s you</string>
    <string name="verification_code">Verification code</string>
    <string name="new_password">New password</string>
    <string name="create_new_password">Create new password</string>
    <string name="send_code">Send code</string>

    <!-- Strings used for Verify Activity -->
    <string name="verify_account">Verify Account</string>
    <string name="verify_code_email">We’ve sent a verification code to your email</string>
    <string name="verify">Verify</string>

    <!-- Strings used for Experience Menu -->
    <string name="our_experiences">Our Experiences</string>

    <!-- Profile Screen -->
    <string name="profile">Profile</string>
    <string name="start">Start</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>


    <!-- Change Password Screen -->
    <string name="change_password_title">Change Password</string>
    <string name="change_password_description">Please enter your current password and the new one</string>
    <string name="current_password">Current password</string>
    <string name="back_to_profile">Back to Profile</string>

    <!-- Safety Recommendations -->
    <string name="safety_recommendations_title">Safety Recommendations</string>
    <string name="safety_recommendations_body">
        • Avoid displaying high-value items.\n\n
        • Keep your phone secure and use discreet headphones when listening to audio.\n\n
        • Do the tour during daylight hours and go with company if possible.\n\n
        • Stay in well-lit tourist areas; avoid empty streets.\n\n
        • In case of emergency, contact the authorities or seek help in official places.\n\n
        • Trust your instincts and avoid risky or suspicious situations.
    </string>

    <!-- Popup strings -->
    <string name="popup_title">You have arrived at Chorro de Quevedo</string>
    <string name="popup_message">Would you like to start the interactive experience now?</string>
    <string name="button_later">Later</string>
    <string name="button_start">Start</string>

    <!-- NavegacionPopUp -->
    <string name="toast_reduced_functionality">Reduced functionality</string>
    <string name="toast_searching_location">Searching for location…</string>
    <string name="audio_name_chorro">Chorro de Quevedo</string>

    <!-- MenuOpcionesGuia -->
    <string name="button_carousel">Image Carousel</string>
    <string name="button_immersive_experience">Immersive Experience</string>
    <string name="button_video_playback">Video Playback</string>

    <!-- ExperienciaCompleta -->
    <string name="complete_experience_title">Complete Experience</string>
    <string name="carousel_title">Image Carousel</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for GeofenceBroadcastReceiver -->
    <string name="arriving_area">You have entered the Chorro de Quevedo area</string>
    <string name="leaving_area">You have left the Chorro de Quevedo area</string>

    <string name="open_with">Abrir con…</string>

    <string name="home" translatable="false">Home</string>
    <string name="favorites" translatable="false">Favorites</string>
    <string name="archive" translatable="false">Archive</string>

    <string name="chorro_description">Chorro de Quevedo is a small square in the historic center of Bogotá, Colombia, that is a tourist spot and of great historical interest.</string>
    <string name="chorro_address" translatable="false">Cl. 12b #22 2-98</string>
    <string name="chorro_name" translatable="false">Plaza Del Chorro De Quevedo</string>
    <string name="defaultD" translatable="false">Default</string>

    <string name="soon_available">Soon Available</string>

    <string name="chorro_quevedo" translatable="false">Chorro de Quevedo </string>

    <string name="error_audio_play">Error when playing audio </string>
    <string name="error_audio_load">Error when loading audio </string>
    <string name="error_audio_not_available">Audio not available </string>

    <string name="start_immersive_experience_title">Immersive Experience </string>
    <string name="start_immersive_experience">Would you like to start the immersive experience now? </string>
    <string name="escribir_comentario">Leave a Comment</string>
    <string name="_5">5</string>
    <string name="actualizar_comentario">Update a Comment</string>
    <string name="user_confirmed_error">Failed to confirm user: %1$s</string>
    <string name="qr_message">Point your camera at the QR code</string>
    <string name="salir">Exit</string>
    <string name="comentarioupdate">Welcome to comments section!</string>
    <string name="en_esta_secci_n_podr_s_editar_y_eliminar_tus_comentarios">In this section you will be able to delete and update your comments.</string>
    <string name="reviews">Reviews</string>
    <string name="review">Review</string>
    <string name="calificaci_n">Rating</string>
    <string name="escribe_tu_rese_a">Write your review</string>
    <string name="move_device_detect_surface">Move your device to detect a surface</string>
    <string name="chorro_history">Chorro de Quevedo\'s History</string>
    <string name="play_video_msg">Touch the surface where you want to see the video</string>
    user_confirmed_error
</resources>