<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/orange"
    android:orientation="horizontal"
    android:gravity="center"
    android:padding="8dp"
    android:backgroundTint="@color/orange">

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:src="@drawable/house_icon"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/home"/>

    <ImageButton
        android:id="@+id/btnFavorites"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:src="@drawable/heart_icon"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/favorites"/>

    <ImageButton
        android:id="@+id/btnArchive"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:src="@drawable/inbox_icon"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/archive"/>

    <ImageButton
        android:id="@+id/btnProfile"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:src="@drawable/profile_icon"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/profile"/>

</LinearLayout>