<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_rounded_yellow"

    android:padding="16dp">

        <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp"/>

        <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_message"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"/>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnDespues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/azulOscuro"
            android:text="@string/button_later"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btnIniciar"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/azulOscuro"
            android:layout_height="wrap_content"
            android:text="@string/button_start"/>
        </LinearLayout>

    </LinearLayout>
