<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/VerificationCodeBtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">

    <TextView
        android:id="@+id/RegistroTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/create_your_account"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/RegistroTexto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/create_your_account_exp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegistroTitulo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412">

        <EditText
            android:id="@+id/Name"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginBottom="14dp"
            android:autofillHints="name"
            android:background="@drawable/rectangle"
            android:hint="@string/name"
            android:textColorHint="#808080"
            android:inputType="text"
            android:textSize="16sp"
            android:drawableStart="@drawable/username_icon"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/Email"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginBottom="14dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/rectangle"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColorHint="#808080"
            android:drawableStart="@drawable/mail_icon"
            android:drawablePadding="10dp"
            android:textSize="16sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            app:endIconMode="password_toggle"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/RegisterBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Email"
            app:layout_constraintVertical_bias="0.15"
            android:layout_marginBottom="14dp"
            android:textSize="16sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rectangle"
                android:inputType="textPassword"
                android:hint="@string/prompt_password"
                app:hintEnabled="false"
                android:padding="12dp"
                android:drawableStart="@drawable/lock_icon"
                android:drawablePadding="10dp"
                android:textColorHint="#808080"
                android:ems="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            app:endIconMode="password_toggle"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/RegisterBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Email"
            app:layout_constraintVertical_bias="0.15"
            android:layout_marginBottom="14dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Confirm_Password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rectangle"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                app:hintEnabled="false"
                android:padding="12dp"
                android:drawableStart="@drawable/lock_icon"
                android:drawablePadding="10dp"
                android:textColorHint="#808080"
                android:ems="10"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/SignupBtn"
        android:layout_width="236dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/blue"
        android:text="@string/continueR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.368" />

    <TextView
        android:id="@+id/LoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/alreadyAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignupBtn"
        app:layout_constraintVertical_bias="0.265" />


</androidx.constraintlayout.widget.ConstraintLayout>