<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/YellowPrincipal"
    tools:context=".Activities.SelectedExperience">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chorro_name"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"/>


    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_rounded"
        android:elevation="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_marginTop="45dp"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_text_background"
        android:padding="8dp"
        android:text="@string/chorro_address"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/ivExperience"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivExperience"
        android:layout_width="317dp"
        android:layout_height="237.75dp"
        android:padding="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/chorro_quevedo"
        app:layout_constraintBottom_toTopOf="@id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLocation"
        app:shapeAppearanceOverlay="@style/RoundedImage"
        app:strokeColor="@color/yellow"
        app:strokeWidth="4dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/chorro_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivExperience"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeStepGranularity="2sp"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="135dp"
        android:layout_height="53dp"
        android:background="@drawable/rounden_button"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/map_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/startRoute"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/startRoute"
        android:layout_width="135dp"
        android:layout_height="53dp"
        android:background="@drawable/rounden_button"
        android:fontFamily="@font/poppins_regular"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.504" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/navigationBarFragmentContainer"
        android:name="com.example.historygo.Activities.Fragments.NavegationBarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout="@layout/fragment_navegation_bar" />


</androidx.constraintlayout.widget.ConstraintLayout>